# variantlib

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  variants.dist.toml  variants.toml
.github/workflows/: ci.yml  whlnext_project_management.yml
tests/: conftest.py  mocked_plugin_as_module.py  mocked_plugins.py  test_api.py  test_combinations.py  test_config.py  test_configuration.py  test_constants.py  test_dist_metadata.py  test_envspec.py  test_installer.py  test_installer_utils.py  test_meta.py  test_plugins.py  test_protocols.py  test_pyproject_toml.py  test_utils.py  test_validators.py  test_variant_dist_info.py  test_variants_json.py  test_wheel_metadata.py  utils.py
tests/artifacts/: expected.json  test_package-0-py3-none-any-00000000.whl  test_package-0-py3-none-any-5d8be4b9.whl  test_package-0-py3-none-any.whl  test_plugin_package-0-py3-none-any-00000000.whl  test_plugin_package-0-py3-none-any-5d8be4b9.whl  test_plugin_package-0-py3-none-any-ac31c899.whl  test_plugin_package-0-py3-none-any.whl  variants.json
tests/artifacts/test-package/: Makefile  pyproject.toml
tests/artifacts/test-plugin-package/: Makefile  pyproject.toml  test_plugin_package.py
tests/artifacts/variant_json_files/: dummy_project-1.0.0-variants.json  sandbox_project-1.0.0-variants.json
tests/commands/: test_analyze_platform.py  test_analyze_wheel.py  test_config.py  test_generate_index_json.py  test_get_variant_hash.py  test_make_variant.py  test_plugins.py  test_unmake_variant.py  test_update_pyproject_toml.py
tests/models/: test_configuration.py  test_provider.py  test_validators.py  test_variant.py
tests/plugins/: test_loader.py  test_py_envs.py
tests/resolver/: test_abi_dependency.py  test_filtering.py  test_lib.py  test_sorting.py
tests/validators/: test_base.py
variantlib/: __init__.py  __main__.py  _installer.py  api.py  base.py  cache.py  combination.py  config.py  configuration.py  constants.py  dist_metadata.py  envspec.py  errors.py  installer.py  installer_utils.py  loader.py  logger.py  meta.py  metaclasses.py  platform.py  plugins.py  protocols.py  pyproject_toml.py  utils.py  validators.py  variant_dist_info.py  variant_file.py  variants_json.py  wheel_metadata.py
variantlib/commands/: add_wheel_to_index_json.py  analyze.py  analyze_platform.py  analyze_wheel.py  generate_index_json.py  get_variant_hash.py  hack_variant.py  index_json_utils.py  main.py  make_variant.py  plugin.py  plugin_arguments.py  unmake_variant.py  update_pyproject_toml.py  utils.py
variantlib/commands/config/: list_paths.py  main.py  setup.py  show.py  urwid_ui.py  variants.dist.toml
variantlib/commands/config/setup_interfaces/: console_ui.py  urwid_ui.py
variantlib/commands/configuration/: create.py  list_paths.py  main.py  set.py  update.py  utils.py
variantlib/commands/plugins/: _display_configs.py  get_all_configs.py  get_configs.py  get_supported_configs.py  list_plugins.py  main.py  validate_property.py
variantlib/models/: base.py  configuration.py  metadata.py  provider.py  validators.py  variant.py  variant_info.py
variantlib/plugins/: _subprocess.py  loader.py  py_backends.py  py_envs.py
variantlib/resolver/: filtering.py  lib.py  sorting.py
variantlib/validators/: base.py  combining.py  keytracking.py  packaging.py  vprop.py
