[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "test-package"
version = "0"
description = "Installable package for testing"
requires-python = ">=3.10"

[variant.default-priorities]
namespace = ["installable_plugin", "non_existing_plugin"]

[variant.providers.installable_plugin]
requires = ["test-plugin-package"]
optional = false

[variant.providers.non_existing_plugin]
requires = ["do-not-install-me"]
optional = true
